python_deployment/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    projekt: python
spec:
  selector:
    app: python
  ports:
  - port: 80
    targetPort: api
  # type: NodePort // Not needed anymore, due to using Ingress
