python_deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    projekt: python
spec:
  selector:
    app: redis
  ports:
  - port: 6379
