python_deployment/redis-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    projekt: python
spec:
  selector:
    app: redis
  ports:
  - port: 6379
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    projekt: python
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        projekt: python
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources: {}
        ports:
        - containerPort: 6379
        livenessProbe:
          exec:
            command: ["redis-cli", "ping"]
        readinessProbe:
          tcpSocket:
            port: 6379
        volumeMounts:
          - mountPath: /data
            name: redis-data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Mi
