python_deployment/python-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
  labels:
    projekt: python
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: python.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-service
            port:
              number: 80
